2024-01-26T00:39:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7662334331 # 57
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 295 1037 / 302 1055
* notice: next accum: outdated-unq outdated-all / unq all: 296 1039 / 302 1055
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-12] / []

2024-01-25T16:11:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7657293622 # 56
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 7 18
* notice: prev accum: outdated-unq outdated-all / unq all: 294 1035 / 301 1051
* notice: next accum: outdated-unq outdated-all / unq all: 295 1037 / 302 1055
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2024-01-11] / [2024-01-25]

2024-01-25T00:42:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7648194576 # 54
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 294 1035 / 300 1049
* notice: next accum: outdated-unq outdated-all / unq all: 294 1035 / 301 1051
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-01-24]

2024-01-24T08:11:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7637276606 # 52