@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-26T00:39:25Z",
+  "timestamp" : "2024-01-29T00:39:07Z",
   "count_outdated" : 1039,
   "uniques_outdated" : 296,
-  "count" : 1055,
-  "uniques" : 302,
+  "count" : 1058,
+  "uniques" : 303,
   "views" : [
     {
       "timestamp": "2024-01-17T00:00:00Z",
@@ -46,6 +46,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
