@@ -1,6 +1,6 @@
 {
-  "count": 16,
-  "uniques": 6,
+  "count": 19,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2024-01-17T00:00:00Z",
@@ -25,6 +25,11 @@
     {
       "timestamp": "2024-01-25T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-28T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
