@@ -1,3 +1,12 @@
+2024-01-29T00:39:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7689550126 # 66
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-29
+* notice: last 14d: unq all: 7 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 296 1039 / 302 1055
+* notice: next accum: outdated-unq outdated-all / unq all: 296 1039 / 303 1058
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2024-01-28]
+
 2024-01-26T00:39:25Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7662334331 # 57
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
